design/contacts.css
.main-content-contacts {
    height: 100%;
    position: relative;
}

.contacts-main {
    overflow-y: hidden;
}

.flex-row {
    flex-direction: row;
}

.top-contacts {
    margin-top: 110px;
}

.floating-contact-container-wrapper {
    padding: 80px 0 80px 80px;
    width: 100%;
}

.floating-cotact-mobile-mask {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.contact-container-wrapper:hover {
    cursor:pointer;
}

.contact-container-wrapper {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    min-width: 456px;
    padding: 24px;
    background-color: white;
    overflow-y: scroll !important;
    box-shadow: 4px 0px 6px 0px rgb(0, 0, 0, 0.08);
    transform: translateY(-4px);
}

.add-contact-button {
    width: 352px;
    display: flex;
    justify-content: center;
    align-items: center;
    align-self: center;
    gap: 16px;
    padding: 12px;
}

.add-contact-button-mobile {
    display: none;
}

.add-person-icon-wrapper,
.floating-menu-options-edit-delete-button,
.floating-menu-back-button {
    width: 32px;
    height: 32px;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1600;
}

.floating-menu-back-button:hover {
    cursor: pointer;
}

.floating-menu-back-button:active {
    border-radius: 50%;
    background-color: var(--button-active);
}

.add-person-icon-wrapper img {
    width: 29px;
    height: 21px;
}

.line-mobile {
    display: none;
}

.contacts-content,
.contacts-first-letter,
.single-contact {
    width: 100%;
}

.contacts-content {
    margin-bottom: 80px;
}

.contacts-first-letter {
    font-size: 20px;
    padding: 17px 36px;
}

.contacts-separator {
    height: 1px;
    margin: 8px 0;
    background: var(--input-separator-color);
}

.add-contact-overlay-separator-mobile {
    display: none;
}

.single-contact {
    padding: 15px 24px;
    display: flex;
    justify-content: left;
    align-items: center;
    gap: 35px;
    border-radius: 10px;
    overflow: hidden;
}

.single-contact:hover {
    background: var(--hover-effect-contacts);
}

.contact-list-initals {
    min-height: 42px;
    height: 42px;
    min-width: 42px;
    width: 42px;
    border-radius: 50%;
    
    color: white;
    border: solid 2px white;
}

.contact-name {
    font-size: 20px;
}

.contact-email {
    color: var(--email-color);
    word-break: break-word;
}

.contact-container-wrapper::-webkit-scrollbar {
    background: white;
    width: 24px;
  
}

.contact-container-wrapper::-webkit-scrollbar-thumb {
    background: var(--scrollbar-color);
    border: solid 8px transparent;
    border-radius: 16px;
    background-clip: content-box;
}

.contact-container-wrapper::-webkit-scrollbar-button:start {
    display: flex;
    justify-content: center;
    background-image: url(../assets/icons/scroll-up-arrow.svg);
    background-repeat: no-repeat;
    background-position: center 20px;
    height: 77px;
}

.contact-container-wrapper::-webkit-scrollbar-button:end {
    display: flex;
    background-image: url(../assets/icons/scroll-down-arrow.svg);
    background-repeat: no-repeat;
    object-fit: contain;
    background-position: center 57px;
    height: 77px;
}



/* DETAILS FOR FULL CONTACT */

.board-container-wrapper {
    flex: 1;
}

.bottom-board {
    transform: translateX(100vw);
    display: flex;
    flex-direction: column;
    gap: 21px;
    transition: transform 400ms ease-in-out;
}

.floating-contact-container-open {
    transform: translateX(0);
}

.floating-contact-header {
    display: flex;
    gap: 54px;
}

.contacts-text {
    font-size: 27px;
    font-weight: 400;
}

.floating-initials-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 120px;
    height: 120px;
    border-radius: 70px;
    min-width: 120px;
    max-width: 120px;
    min-height: 120px;
    max-width: 120px;
    border: solid 3px white;
}

.floating-initials {
    font-size: 47px;
    font-weight: 500;
    color: white;

}

.floating-initials,
.floating-full-name {
    font-size: 47px;
    font-weight: 500;
}

.floating-name-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
}

.floating-edit-delete-wrapper {
    display: flex;
    gap: 16px;
    height: 24px;
}

.floating-edit-delete-wrapper div{
    display: flex;
    justify-content: center;
    align-items: center;
}

.floating-edit-delete-wrapper svg {
    margin-right: 13px;
}

.floating-edit-wrapper:hover > div,
.floating-delete-wrapper:hover > div {
    color: var(--light-blue);
    cursor: pointer;
    font-weight: 700;
}

.floating-edit-wrapper:hover > div > svg *,
.floating-delete-wrapper:hover > div > svg * {
    fill: var(--light-blue);
}

.floating-edit-delete-wrapper-mobile {
    /* display: none; */
    display: flex;
    flex-direction: column;
    position: absolute;
    right: 8px;
    bottom: 96px;
    padding: 10px;
    border-radius: 20px 20px 0 20px;
    background-color: white;
    box-shadow: 0 4px 4px 0 rgb(0, 0, 0, 0.25);
    transform: translateX(50dvw);
    transition: 125ms ease-in-out;
    z-index: 2000;
    cursor: pointer;
}

.show-floating-edit-delete-wrapper-mobile {
    transform: translateX(0);
    /* display: flex; */
}

.floating-edit-wrapper-mobile,
.floating-delete-wrapper-mobile {
    display: flex;
    gap: 8px;
    padding: 8px;
    color: var(--join-dark);
}

.floating-edit-wrapper-mobile:active,
.floating-delete-wrapper-mobile:active {
    font-weight: 700;
    color: var(--light-blue);
}

.floating-edit-wrapper-mobile:active > div > svg > path,
.floating-delete-wrapper-mobile:active > div > svg > path {
    fill: var(--light-blue);
}

.contact-info {
    font-size: 20px;
    margin-top: 44px;
    margin-bottom: 44px;
}

.floating-mail-phone-wrapper {
    display: flex;
    flex-direction: column;
    gap: 22px;
}

.floating-mail-phone {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.color-blue-mail {
    color: var(--email-color);
}

.floating-mail-phone-header {
    font-weight: 700;
}

.highlight-contact {
    background-color: var(--join-dark);
    color: var(--white);
}

.highlight-contact:hover {
    background: var(--join-dark);
    color: var(--white);
}

.contact-created-button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: fit-content;
    margin-top: 60px;
    font-size: 20px;
    border-radius: 20px;
    font-weight: 400;
    transform: translateX(100vw);
    transition: 300ms ease-in-out;
}

.contact-created-button-show {
    transform: translateX(0);
}

.floating-menu-back-button {
    display: none;
    position: absolute;
    right: 40px;
    width: 32px;
    height: 32px;
}

.floating-menu-back-icon {
    width: 32px;
}

.floating-menu-options-edit-delete-button {
      display: none;
    bottom: 116px;
    border-radius: 56px;
    position: absolute;
    right: 40px;
    width: 56px;
    height: 56px;
}

.floating-contact-mobile-mask {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    z-index: 1800;
}

